--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <li class="item-advantage">
               <div class="svg-advantage">
                 <svg class="icon-advantage" width="70px" height="70px">
-                  <use href="img/icon.svg#icon-antenna-1"></use>
+                  <use href="./img/icon.svg#icon-antenna-1"></use>
                 </svg>
               </div>
               <h3 class="title-advantage">Увага до деталей</h3>
@@ -82,7 +82,7 @@
             <li class="item-advantage">
               <div class="svg-advantage">
                 <svg class="icon-advantage" width="70px" height="70px">
-                  <use href="img/icon.svg#icon-clock-1"></use>
+                  <use href="./img/icon.svg#icon-clock-1"></use>
                 </svg>
               </div>
               <h3 class="title-advantage">Пунктуальність</h3>
@@ -93,7 +93,7 @@
             <li class="item-advantage">
               <div class="svg-advantage">
                 <svg class="icon-advantage" width="70px" height="70px">
-                  <use href="img/icon.svg#icon-diagram-1"></use>
+                  <use href="./img/icon.svg#icon-diagram-1"></use>
                 </svg>
               </div>
               <h3 class="title-advantage">Планування</h3>
@@ -104,7 +104,7 @@
             <li class="item-advantage">
               <div class="svg-advantage">
                 <svg class="icon-advantage" width="70px" height="70px">
-                  <use href="img/icon.svg#icon-astronaut-1"></use>
+                  <use href="./img/icon.svg#icon-astronaut-1"></use>
                 </svg>
               </div>
               <h3 class="title-advantage">Сучасні технології</h3>
@@ -153,7 +153,7 @@
                       aria-label="instagram"
                     >
                       <svg class="social-icon" width="20px" height="20px">
-                        <use href="img/icon.svg#icon-instagram-1"></use>
+                        <use href="./img/icon.svg#icon-instagram-1"></use>
                       </svg>
                     </a>
                   </li>
@@ -166,7 +166,7 @@
                       aria-label="twitter"
                     >
                       <svg class="social-icon" width="20px" height="20px">
-                        <use href="img/icon.svg#icon-twitter-1"></use>
+                        <use href="./img/icon.svg#icon-twitter-1"></use>
                       </svg>
                     </a>
                   </li>
@@ -179,7 +179,7 @@
                       aria-label="facebook"
                     >
                       <svg class="social-icon" width="20px" height="20px">
-                        <use href="img/icon.svg#icon-facebook-1"></use>
+                        <use href="./img/icon.svg#icon-facebook-1"></use>
                       </svg>
                     </a>
                   </li>
@@ -192,7 +192,7 @@
                       aria-label="Linkedin"
                     >
                       <svg class="social-icon" width="20px" height="20px">
-                        <use href="img/icon.svg#icon-linkedin-1"></use>
+                        <use href="./img/icon.svg#icon-linkedin-1"></use>
                       </svg>
                     </a>
                   </li>
@@ -219,7 +219,7 @@
                       aria-label="instagram"
                     >
                       <svg class="social-icon" width="20px" height="20px">
-                        <use href="img/icon.svg#icon-instagram-1"></use>
+                        <use href="./img/icon.svg#icon-instagram-1"></use>
                       </svg>
                     </a>
                   </li>
@@ -232,7 +232,7 @@
                       aria-label="twitter"
                     >
                       <svg class="social-icon" width="20px" height="20px">
-                        <use href="img/icon.svg#icon-twitter-1"></use>
+                        <use href="./img/icon.svg#icon-twitter-1"></use>
                       </svg>
                     </a>
                   </li>
@@ -245,7 +245,7 @@
                       aria-label="facebook"
                     >
                       <svg class="social-icon" width="20px" height="20px">
-                        <use href="img/icon.svg#icon-facebook-1"></use>
+                        <use href="./img/icon.svg#icon-facebook-1"></use>
                       </svg>
                     </a>
                   </li>
@@ -258,7 +258,7 @@
                       aria-label="Linkedin"
                     >
                       <svg class="social-icon" width="20px" height="20px">
-                        <use href="img/icon.svg#icon-linkedin-1"></use>
+                        <use href="./img/icon.svg#icon-linkedin-1"></use>
                       </svg>
                     </a>
                   </li>
@@ -280,7 +280,7 @@
                       aria-label="instagram"
                     >
                       <svg class="social-icon" width="20px" height="20px">
-                        <use href="img/icon.svg#icon-instagram-1"></use>
+                        <use href="./img/icon.svg#icon-instagram-1"></use>
                       </svg>
                     </a>
                   </li>
@@ -293,7 +293,7 @@
                       aria-label="twitter"
                     >
                       <svg class="social-icon" width="20px" height="20px">
-                        <use href="img/icon.svg#icon-twitter-1"></use>
+                        <use href="./img/icon.svg#icon-twitter-1"></use>
                       </svg>
                     </a>
                   </li>
@@ -306,7 +306,7 @@
                       aria-label="facebook"
                     >
                       <svg class="social-icon" width="20px" height="20px">
-                        <use href="img/icon.svg#icon-facebook-1"></use>
+                        <use href="./img/icon.svg#icon-facebook-1"></use>
                       </svg>
                     </a>
                   </li>
@@ -319,7 +319,7 @@
                       aria-label="Linkedin"
                     >
                       <svg class="social-icon" width="20px" height="20px">
-                        <use href="img/icon.svg#icon-linkedin-1"></use>
+                        <use href="./img/icon.svg#icon-linkedin-1"></use>
                       </svg>
                     </a>
                   </li>
@@ -346,7 +346,7 @@
                       aria-label="instagram"
                     >
                       <svg class="social-icon" width="20px" height="20px">
-                        <use href="img/icon.svg#icon-instagram-1"></use>
+                        <use href="./img/icon.svg#icon-instagram-1"></use>
                       </svg>
                     </a>
                   </li>
@@ -359,7 +359,7 @@
                       aria-label="twitter"
                     >
                       <svg class="social-icon" width="20px" height="20px">
-                        <use href="img/icon.svg#icon-twitter-1"></use>
+                        <use href="./img/icon.svg#icon-twitter-1"></use>
                       </svg>
                     </a>
                   </li>
@@ -372,7 +372,7 @@
                       aria-label="facebook"
                     >
                       <svg class="social-icon" width="20px" height="20px">
-                        <use href="img/icon.svg#icon-facebook-1"></use>
+                        <use href="./img/icon.svg#icon-facebook-1"></use>
                       </svg>
                     </a>
                   </li>
@@ -385,7 +385,7 @@
                       aria-label="Linkedin"
                     >
                       <svg class="social-icon" width="20px" height="20px">
-                        <use href="img/icon.svg#icon-linkedin-1"></use>
+                        <use href="./img/icon.svg#icon-linkedin-1"></use>
                       </svg>
                     </a>
                   </li>
@@ -402,37 +402,37 @@
             <li>
               <a class="link link-client" href="#"
                 ><svg class="icon-client" width="106px" height="60px">
-                  <use href="/img/icon.svg#icon-Client-1"></use></svg
+                  <use href="./img/icon.svg#icon-Client-1"></use></svg
               ></a>
             </li>
             <li>
               <a class="link link-client" href="#"
                 ><svg class="icon-client" width="106px" height="60px">
-                  <use href="/img/icon.svg#icon-Client-2"></use></svg
+                  <use href="./img/icon.svg#icon-Client-2"></use></svg
               ></a>
             </li>
             <li>
               <a class="link link-client" href="#"
                 ><svg class="icon-client" width="106px" height="60px">
-                  <use href="/img/icon.svg#icon-Client-3"></use></svg
+                  <use href="./img/icon.svg#icon-Client-3"></use></svg
               ></a>
             </li>
             <li>
               <a class="link link-client" href="#"
                 ><svg class="icon-client" width="106px" height="60px">
-                  <use href="/img/icon.svg#icon-Client-4"></use></svg
+                  <use href="./img/icon.svg#icon-Client-4"></use></svg
               ></a>
             </li>
             <li>
               <a class="link link-client" href="#"
                 ><svg class="icon-client" width="106px" height="60px">
-                  <use href="/img/icon.svg#icon-Client-5"></use></svg
+                  <use href="./img/icon.svg#icon-Client-5"></use></svg
               ></a>
             </li>
             <li>
               <a class="link link-client" href="#"
                 ><svg class="icon-client" width="106px" height="60px">
-                  <use href="/img/icon.svg#icon-Client-6"></use></svg
+                  <use href="./img/icon.svg#icon-Client-6"></use></svg
               ></a>
             </li>
           </ul>
@@ -480,7 +480,7 @@
                 aria-label="instagram"
               >
                 <svg class="social-icon" width="20px" height="20px">
-                  <use href="img/icon.svg#icon-instagram-1"></use>
+                  <use href="./img/icon.svg#icon-instagram-1"></use>
                 </svg>
               </a>
             </li>
@@ -493,7 +493,7 @@
                 aria-label="twitter"
               >
                 <svg class="social-icon" width="20px" height="20px">
-                  <use href="img/icon.svg#icon-twitter-1"></use>
+                  <use href="./img/icon.svg#icon-twitter-1"></use>
                 </svg>
               </a>
             </li>
@@ -506,7 +506,7 @@
                 aria-label="facebook"
               >
                 <svg class="social-icon" width="20px" height="20px">
-                  <use href="img/icon.svg#icon-facebook-1"></use>
+                  <use href="./img/icon.svg#icon-facebook-1"></use>
                 </svg>
               </a>
             </li>
@@ -519,7 +519,7 @@
                 aria-label="Linkedin"
               >
                 <svg class="social-icon" width="20px" height="20px">
-                  <use href="img/icon.svg#icon-linkedin-1"></use>
+                  <use href="./img/icon.svg#icon-linkedin-1"></use>
                 </svg>
               </a>
             </li>
