--- a/portfolio.html
+++ b/portfolio.html
@@ -36,14 +36,14 @@
           <li class="item-nav">
             <a class="link" href="mailto:info@devstudio.com">
               <svg width="16px" height="12px">
-                <use href="/img/icon.svg#icon-mail"></use></svg
+                <use href="./img/icon.svg#icon-mail"></use></svg
               >info@devstudio.com</a
             >
           </li>
           <li class="item-nav">
             <a class="link" href="tel:+380961111111">
               <svg width="10px" height="16px">
-                <use href="/img/icon.svg#icon-tel"></use></svg
+                <use href="./img/icon.svg#icon-tel"></use></svg
               >+38 096 111 11 11</a
             >
           </li>
@@ -242,7 +242,7 @@
                 aria-label="instagram"
               >
                 <svg class="social-icon" width="20px" height="20px">
-                  <use href="img/icon.svg#icon-instagram-1"></use>
+                  <use href="./img/icon.svg#icon-instagram-1"></use>
                 </svg>
               </a>
             </li>
@@ -255,7 +255,7 @@
                 aria-label="twitter"
               >
                 <svg class="social-icon" width="20px" height="20px">
-                  <use href="img/icon.svg#icon-twitter-1"></use>
+                  <use href="./img/icon.svg#icon-twitter-1"></use>
                 </svg>
               </a>
             </li>
@@ -268,7 +268,7 @@
                 aria-label="facebook"
               >
                 <svg class="social-icon" width="20px" height="20px">
-                  <use href="img/icon.svg#icon-facebook-1"></use>
+                  <use href="./img/icon.svg#icon-facebook-1"></use>
                 </svg>
               </a>
             </li>
@@ -281,7 +281,7 @@
                 aria-label="Linkedin"
               >
                 <svg class="social-icon" width="20px" height="20px">
-                  <use href="img/icon.svg#icon-linkedin-1"></use>
+                  <use href="./img/icon.svg#icon-linkedin-1"></use>
                 </svg>
               </a>
             </li>
